Using a context service.